--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,3 +1,5 @@
 @import "normalize.css";
+@import "base/_variables";
 @import "base/_global";
+@import "modules/_buttons";
 @import "modules/_large-hero";
